<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff2e6"
    tools:context=".MoneyConverter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MoneyConverter">


        <TextView
            android:id="@+id/valdalel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"

            android:text="@string/app_name"
            android:textColor="@color/orange3"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/val2convert_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hintedittextval2convert" />

        <RadioGroup
            android:id="@+id/radio_grp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            >

            <RadioButton
                android:id="@+id/dinar2euro_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DinarEuro"
                android:textSize="19dp" />

            <RadioButton
                android:id="@+id/euro2dinar_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EuroDinar"
                android:textSize="19dp" />
        </RadioGroup>

        <Button
            android:id="@+id/b_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/convert_b"
            android:onClick="convert"
            />



        <Button
            android:id="@+id/b_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/exit_btn"
            android:textColor="@color/white"
            android:onClick="exit"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




